--- a/en/welcome.html
+++ b/en/welcome.html
@@ -32,7 +32,7 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/en/about/">About</a><a class="page-link" href="/en/index-en.html">English</a><a class="page-link" href="/en/language-syntax.html/">Syntax</a></div>
+        <div class="trigger"><a class="page-link" href="/en/about/">About</a><a class="page-link" href="/en/language-syntax.html/">Syntax</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
