--- a/language-syntax.html/index.html
+++ b/language-syntax.html/index.html
@@ -31,7 +31,7 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/about/">About</a><a class="page-link" href="/index-en.html">English</a><a class="page-link" href="/language-syntax.html/">Syntaxe</a></div>
+        <div class="trigger"><a class="page-link" href="/about/">A propos</a><a class="page-link" href="/language-syntax.html/">Syntaxe</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
