header lang switcher

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/about/">A propos</a><a class="page-link" href="/language-syntax.html/">Syntaxe</a></div>
+        <div class="trigger">
+          
+          
+          <a class="page-link" href="/en/"> English </a>
+          <a class="page-link" href="/about/">A propos</a><a class="page-link" href="/language-syntax.html/">Syntaxe</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p><a href="/en/"> English Version</a></p>
-
-<p>28/09/2022 09:40</p>
-
-<h1 id="cadriciel-framework-cyk">Cadriciel (Framework) CYK</h1>
+        <div class="home"><h1 id="cadriciel-framework-cyk">Cadriciel (Framework) CYK</h1>
 <h2 id="mobile-ou-desktop">Mobile ou Desktop</h2>
 
 <ul>
