--- a/en/about/index.html
+++ b/en/about/index.html
@@ -31,7 +31,11 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/en/about/">About</a><a class="page-link" href="/en/language-syntax.html/">Syntax</a></div>
+        <div class="trigger">
+          
+          <a class="page-link" href="/"> Français </a>
+          
+          <a class="page-link" href="/en/about/">About</a><a class="page-link" href="/en/language-syntax.html/">Syntax</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
