--- a/welcome.html
+++ b/welcome.html
@@ -32,7 +32,11 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/about/">A propos</a><a class="page-link" href="/language-syntax.html/">Syntaxe</a></div>
+        <div class="trigger">
+          
+          
+          <a class="page-link" href="/en/"> English </a>
+          <a class="page-link" href="/about/">A propos</a><a class="page-link" href="/language-syntax.html/">Syntaxe</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
