--- a/welcome.html
+++ b/welcome.html
@@ -36,7 +36,7 @@
           
           
           <a class="page-link" href="/en/"> English </a>
-          <a class="page-link" href="/about/">A propos</a><a class="page-link" href="/language-syntax.html/">Syntaxe</a></div>
+          <a class="page-link" href="/about/">A propos</a><a class="page-link" href="/language-syntax-en.html">Syntax</a><a class="page-link" href="/language-syntax.html/">Syntaxe</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
