--- a/en/welcome.html
+++ b/en/welcome.html
@@ -36,7 +36,7 @@
           
           <a class="page-link" href="/"> Français </a>
           
-          <a class="page-link" href="/en/about/">About</a><a class="page-link" href="/en/language-syntax.html/">Syntax</a></div>
+          <a class="page-link" href="/en/about/">About</a><a class="page-link" href="/en/language-syntax-en.html">Syntax</a><a class="page-link" href="/en/language-syntax.html/">Syntaxe</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
