--- a/en/welcome.html
+++ b/en/welcome.html
@@ -36,7 +36,7 @@
           
           <a class="page-link" href="/"> Français </a>
           
-          <a class="page-link" href="/en/about/">About</a><a class="page-link" href="/en/language-syntax-en.html">Syntax</a><a class="page-link" href="/en/language-syntax.html/">Syntaxe</a></div>
+          <a class="page-link" href="/en/why-use-me/">Argumentaire</a><a class="page-link" href="/en/getting-started/">Pour démarrer</a><a class="page-link" href="/en/compta-intro/">Demo</a><a class="page-link" href="/en/language-syntax/">Noyau</a><a class="page-link" href="/en/backend/">Backend</a><a class="page-link" href="/en/frontend/">Frontend</a><a class="page-link" href="/en/about/">About</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
