--- a/index.html
+++ b/index.html
@@ -35,21 +35,21 @@
           
           
           <a class="page-link" href="/en/"> English </a>
-          <a class="page-link" href="/about/">A propos</a><a class="page-link" href="/language-syntax-en.html">Syntax</a><a class="page-link" href="/language-syntax.html/">Syntaxe</a></div>
+          <a class="page-link" href="/why-use-me/">Argumentaire</a><a class="page-link" href="/getting-started/">Pour démarrer</a><a class="page-link" href="/compta-intro/">Démo</a><a class="page-link" href="/language-syntax/">Noyau</a><a class="page-link" href="/backend/">Backend</a><a class="page-link" href="/frontend/">Frontend</a><a class="page-link" href="/about/">A propos</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
         <div class="home"><h1 id="cadriciel-cyk">Cadriciel CYK</h1>
 
-<p><em>CYK Framework</em> est un cadriciel pour développer des applications Web couvrant aussi bien la partie serveur (<em>back end</em>) que la partie cliente (<em>front end</em>)</p>
+<p><em>CYK Framework</em> est un cadriciel pour développer des applications Web modernes couvrant aussi bien la partie serveur (<em>back end</em>) que la partie cliente (<em>front end</em>)</p>
 <ul>
-  <li>Un <a href="/why-use-me.html">argumentaire</a> montre les avantages d’utiliser ce cadriciel.</li>
-  <li>En guise d’introduction pour les développeurs, un guide pas à pas de création d’une application gérant une base de données de films de cinéma et d’acteurs.</li>
-  <li>Pour l’utilisateur final, une <a href="https://cyk-compta.herokuapp.com">application de comptabilité</a> permet de tester l’ergonomie et les performances du cadriciel dans un contexte plus professionnel. Cette <a href="/compta-intro.html">introduction</a> donne un aperçu des possibilités de cette application.</li>
-  <li>Le <a href="/language-syntax.html">noyau du cadriciel</a> est un langage orienté objet utilisant une syntaxe <strong>XML</strong> qui décrit la logique de l’application</li>
-  <li>Pour la partie serveur (<em>back end</em>), des instructions serveur décrivent le schéma de la base de données (<strong>Postgresql</strong>) et permettent d’exécuter des requêtes de base de données ou des procédures sur le serveur d’application (<strong>NodeJS</strong>)</li>
-  <li>La partie cliente utilise les cadriciels <strong>Quasar</strong> et <strong>Vue3 JS</strong>. Des instructions client (<em>front end</em>) décrivent l’interface utilisateur (formulaires de saisie, contrôles de validation …)</li>
+  <li>Un <a href="/why-use-me/">argumentaire</a> montre les avantages d’utiliser ce cadriciel.</li>
+  <li>En guise d’introduction pour les développeurs, un <a href="/getting-started/">guide pas à pas</a> de création d’une application gérant une base de données de films de cinéma et d’acteurs.</li>
+  <li>Pour l’utilisateur final, une <a href="https://cyk-compta.herokuapp.com">application de comptabilité</a> permet de tester l’ergonomie et les performances du cadriciel dans un contexte plus professionnel. Cette <a href="/compta-intro/">introduction</a> donne un aperçu des possibilités de cette application.</li>
+  <li>Le <a href="/language-syntax/">noyau du cadriciel</a> est un langage orienté objet utilisant une syntaxe <strong>XML</strong> qui décrit la logique de l’application</li>
+  <li>Pour la partie serveur (<em>back end</em>), des <a href="/backend/">instructions serveur</a> décrivent le schéma de la base de données (<strong>Postgresql</strong>) et permettent d’exécuter des requêtes de base de données ou des procédures sur le serveur d’application (<strong>NodeJS</strong>)</li>
+  <li>La partie cliente utilise les cadriciels <strong>Quasar</strong> et <strong>Vue3 JS</strong>. Des <a href="/frontend/">instructions client</a> (<em>front end</em>) décrivent l’interface utilisateur (formulaires de saisie, contrôles de validation …)</li>
 </ul>
 
 <h2 class="post-list-heading">Posts</h2>
