--- a/404.html
+++ b/404.html
@@ -35,7 +35,7 @@
           
           
           <a class="page-link" href="/en/"> English </a>
-          <a class="page-link" href="/about/">A propos</a><a class="page-link" href="/language-syntax-en.html">Syntax</a><a class="page-link" href="/language-syntax.html/">Syntaxe</a></div>
+          <a class="page-link" href="/why-use-me/">Argumentaire</a><a class="page-link" href="/getting-started/">Pour démarrer</a><a class="page-link" href="/compta-intro/">Démo</a><a class="page-link" href="/language-syntax/">Noyau</a><a class="page-link" href="/backend/">Backend</a><a class="page-link" href="/frontend/">Frontend</a><a class="page-link" href="/about/">A propos</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
