--- a/compta-intro/index.html
+++ b/compta-intro/index.html
@@ -58,7 +58,7 @@
 
 <h2 id="connexion">Connexion</h2>
 
-<p><img src="/images/scr_compta_login.png" alt="écran de connexion" /></p>
+<p><img src="/images/scr_compta_login.png" width="375" /></p>
 
 <p>Utilisez les identifiants suivants :</p>
 
