--- a/welcome.html
+++ b/welcome.html
@@ -62,7 +62,7 @@
 </div>
 
       <div class="footer-col footer-col-3">
-        <p>CYK Framework XML Syntax to program full stack web applications</p>
+        <p>A Full Stack Web Applications Framework</p>
       </div>
     </div>
 
