--- a/en/backend/index.html
+++ b/en/backend/index.html
@@ -9,16 +9,16 @@
 <meta property="og:locale" content="fr" />
 <meta name="description" content="A Full Stack Web Applications Framework" />
 <meta property="og:description" content="A Full Stack Web Applications Framework" />
-<link rel="canonical" href="http://localhost:4000/en/backend/" />
-<meta property="og:url" content="http://localhost:4000/backend/" />
+<link rel="canonical" href="https://pchaneyo.github.io/home/en/backend/" />
+<meta property="og:url" content="https://pchaneyo.github.io/home/backend/" />
 <meta property="og:site_name" content="CYK Framework" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Backend" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","description":"A Full Stack Web Applications Framework","headline":"Backend","url":"http://localhost:4000/backend/"}</script>
+{"@context":"https://schema.org","@type":"WebPage","description":"A Full Stack Web Applications Framework","headline":"Backend","url":"https://pchaneyo.github.io/home/backend/"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/en/assets/main.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/en/feed.xml" title="CYK Framework" /></head>
+<link rel="stylesheet" href="/en/assets/main.css"><link type="application/atom+xml" rel="alternate" href="https://pchaneyo.github.io/home/en/feed.xml" title="CYK Framework" /></head>
 <body><header class="site-header" role="banner">
 
   <div class="wrapper"><a class="site-title" rel="author" href="/en/">CYK Framework</a><nav class="site-nav">
