--- a/why-use-me/index.html
+++ b/why-use-me/index.html
@@ -9,16 +9,16 @@
 <meta property="og:locale" content="fr" />
 <meta name="description" content="A Full Stack Web Applications Framework" />
 <meta property="og:description" content="A Full Stack Web Applications Framework" />
-<link rel="canonical" href="http://localhost:4000/why-use-me/" />
-<meta property="og:url" content="http://localhost:4000/why-use-me/" />
+<link rel="canonical" href="https://pchaneyo.github.io/home/why-use-me/" />
+<meta property="og:url" content="https://pchaneyo.github.io/home/why-use-me/" />
 <meta property="og:site_name" content="CYK Framework" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Argumentaire" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","description":"A Full Stack Web Applications Framework","headline":"Argumentaire","url":"http://localhost:4000/why-use-me/"}</script>
+{"@context":"https://schema.org","@type":"WebPage","description":"A Full Stack Web Applications Framework","headline":"Argumentaire","url":"https://pchaneyo.github.io/home/why-use-me/"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="CYK Framework" /></head>
+<link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="https://pchaneyo.github.io/home/feed.xml" title="CYK Framework" /></head>
 <body><header class="site-header" role="banner">
 
   <div class="wrapper"><a class="site-title" rel="author" href="/">CYK Framework</a><nav class="site-nav">
