--- a/en/language-syntax/index.html
+++ b/en/language-syntax/index.html
@@ -133,6 +133,9 @@
   </tbody>
 </table>
 
+<p>Le schéma du XML est ici : 
+<a href="schema/cyklang.xsd">https://www.cyklang.net/cyklang.xsd</a></p>
+
 <h2 id="types-de-données">Types de données</h2>
 <ul>
   <li>Texte :</li>
