--- a/getting-started/index.html
+++ b/getting-started/index.html
@@ -49,7 +49,7 @@
 <p>Aller au <a href="https://www.nodejs.org">site de NodeJS</a>
 La page de téléchargement se présente comme suit :</p>
 
-<p><img src="images/nodejs_homepage.png" alt="Page d'accueil de nodejs.org" /></p>
+<p><img src="/images/nodejs_homepage.png" alt="Page d'accueil de nodejs.org" /></p>
 
 <ul>
   <li>Choisissez la version 16 LTS (Long Term Support)</li>
