--- a/compta-intro/index.html
+++ b/compta-intro/index.html
@@ -31,7 +31,7 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/why-use-me/">Argumentaire</a><a class="page-link" href="/getting-started/">Pour démarrer</a><a class="page-link" href="/compta-intro/">Démo</a><a class="page-link" href="/language-syntax/">Noyau</a><a class="page-link" href="/backend/">Backend</a><a class="page-link" href="/frontend/">Frontend</a><a class="page-link" href="/about/">A propos</a>
+        <div class="trigger"><a class="page-link" href="/why-use-me/">Argumentaire</a><a class="page-link" href="/getting-started/">Pour démarrer</a><a class="page-link" href="/compta-intro/">Démo</a><a class="page-link" href="/reference/">Référence</a><a class="page-link" href="/about/">A propos</a>
           
           <a class="page-link" href="/en/"> <img src="/images/english.png" height="20"/> English </a>
           
