--- a/en/welcome.html
+++ b/en/welcome.html
@@ -32,7 +32,7 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/en/why-use-me/">Argumentaire</a><a class="page-link" href="/en/getting-started/">Pour démarrer</a><a class="page-link" href="/en/compta-intro/">Demo</a><a class="page-link" href="/en/language-syntax/">Noyau</a><a class="page-link" href="/en/backend/">Backend</a><a class="page-link" href="/en/frontend/">Frontend</a><a class="page-link" href="/en/about/">About</a>
+        <div class="trigger"><a class="page-link" href="/en/why-use-me/">Argumentaire</a><a class="page-link" href="/en/getting-started/">Pour démarrer</a><a class="page-link" href="/en/compta-intro/">Demo</a><a class="page-link" href="/en/reference/">Reference</a><a class="page-link" href="/en/about/">About</a>
           <a class="page-link" href="/"><img src="/images/french.png" height="20"/>&ensp; Français </a>
           
           
