--- a/compta-intro/index.html
+++ b/compta-intro/index.html
@@ -42,7 +42,7 @@
       <div class="wrapper">
         <h1 id="démo-compta">Démo Compta</h1>
 
-<p>L’application est accessible sur le site d’hébergement Heroku par ce <a href="https://cyk-compta.herokuapp.com">lien</a></p>
+<p>L’application est accessible sur <a href="https://demo.cyklang.net">https://demo.cyklang.net</a></p>
 
 <h2 id="sommaire">Sommaire</h2>
 
