--- a/en/getting-started/index.html
+++ b/en/getting-started/index.html
@@ -44,7 +44,15 @@
 
 <p>Si vous n’êtes pas développeur, l’<a href="/en/compta-intro/">introduction au logiciel de démonstration cyk-compta</a> permet d’avoir un aperçu des possibilité du cadriciel</p>
 
-<h2 id="installer-nodejs">Installer NodeJS</h2>
+<p>Selon votre système d’exploitation, suivez la procédure appropriée :</p>
+
+<ul>
+  <li><a href="/en/starter-win/">Windows</a></li>
+  <li><a href="/en/starter-mac/">MacOS</a></li>
+  <li><a href="/en/starter-linux/">Linux</a>
+    <h2 id="installer-nodejs">Installer NodeJS</h2>
+  </li>
+</ul>
 
 <p>Aller au <a href="https://www.nodejs.org">site de NodeJS</a>
 La page de téléchargement se présente comme suit :</p>
