install in 3 steps

--- a/en/getting-started/index.html
+++ b/en/getting-started/index.html
@@ -40,9 +40,11 @@
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <h1 id="pour-démarrer-à-lusage-des-développeurs">Pour démarrer (à l’usage des développeurs)</h1>
+        <h1 id="guide-de-démarrage-à-lusage-des-développeurs">Guide de démarrage (à l’usage des développeurs)</h1>
 
 <p>Si vous n’êtes pas développeur, l’<a href="/en/compta-intro/">introduction au logiciel de démonstration cyk-compta</a> permet d’avoir un aperçu des possibilité du cadriciel</p>
+
+<h2 id="installer-lenvironnement-de-développement">Installer l’environnement de développement</h2>
 
 <p>Selon votre système d’exploitation, suivez la procédure appropriée :</p>
 
@@ -51,6 +53,17 @@
   <li><a href="/en/starter-mac/">MacOS</a></li>
   <li><a href="/en/starter-linux/">Linux</a></li>
 </ul>
+
+<h2 id="premiers-pas-avec-le-cadriciel-cyk">Premiers pas avec le cadriciel CYK</h2>
+
+<p><a name="install_code"></a></p>
+<h2 id="installer-visual-studio-code">Installer Visual Studio Code</h2>
+
+<p>Aller sur le <a href="https://code.visualstudio.com/">site de visual studio code</a></p>
+
+<p><img src="/images/vsc_homepage.png" alt="Accueil Visual Studio Code" /></p>
+
+<p>Téléchargez et installez la dernière version stable de Visual Studio Code</p>
 
       </div>
     </main><footer class="site-footer h-card">
