--- a/getting-started/index.html
+++ b/getting-started/index.html
@@ -9,16 +9,16 @@
 <meta property="og:locale" content="fr" />
 <meta name="description" content="A Full Stack Web Applications Framework" />
 <meta property="og:description" content="A Full Stack Web Applications Framework" />
-<link rel="canonical" href="https://pchaneyo.github.io/home/getting-started/" />
-<meta property="og:url" content="https://pchaneyo.github.io/home/getting-started/" />
+<link rel="canonical" href="https://www.cyklang.net/getting-started/" />
+<meta property="og:url" content="https://www.cyklang.net/getting-started/" />
 <meta property="og:site_name" content="CYK Framework" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Pour démarrer" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","description":"A Full Stack Web Applications Framework","headline":"Pour démarrer","url":"https://pchaneyo.github.io/home/getting-started/"}</script>
+{"@context":"https://schema.org","@type":"WebPage","description":"A Full Stack Web Applications Framework","headline":"Pour démarrer","url":"https://www.cyklang.net/getting-started/"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="https://pchaneyo.github.io/home/feed.xml" title="CYK Framework" /></head>
+<link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="https://www.cyklang.net/feed.xml" title="CYK Framework" /></head>
 <body><header class="site-header" role="banner">
 
   <div class="wrapper"><a class="site-title" rel="author" href="/">CYK Framework</a><nav class="site-nav">
@@ -42,9 +42,19 @@
       <div class="wrapper">
         <h1 id="guide-de-démarrage-à-lusage-des-développeurs">Guide de démarrage (à l’usage des développeurs)</h1>
 
-<p>Si vous n’êtes pas développeur, l’<a href="/compta-intro/">introduction au logiciel de démonstration cyk-compta</a> permet d’avoir un aperçu des possibilité du cadriciel</p>
+<p>Si vous voulez voir un aperçu de l’expérience utilisateur permise par le framework CYK, dirigez-vous plutôt vers l’<a href="/compta-intro/">introduction au logiciel de démonstration cyk-compta</a> qui décrit l’ergonomie de l’interface dans un contexte professionnel avec une mini application de comptabilité.</p>
+
+<p>Si vous êtes interessé par l’expérience du développeur, alors vous êtes au bon endroit. Pour nous concentrer sur la chaine de développement, nous utiliserons une application plus simple que la comptabilité mais ce ne sera pas non plus le trivial ‘Hello World’ pour que nous puissions couvrir les différents aspects d’une véritable application.
+Nous allons gérer une base de données cinématographiques contenant simplement 3 tables :</p>
+<ul>
+  <li>la table des acteurs</li>
+  <li>la table des films</li>
+  <li>la table des liens entre les films et les acteurs</li>
+</ul>
 
 <h2 id="installer-lenvironnement-de-développement">Installer l’environnement de développement</h2>
+
+<p>Tout d’abord, installons sur votre ordinateur tout ce qu’il faut pour développer et tester, ainsi que l’application en elle-même.</p>
 
 <p>Selon votre système d’exploitation, suivez la procédure appropriée :</p>
 
@@ -55,6 +65,8 @@
 </ul>
 
 <h2 id="premiers-pas-avec-le-cadriciel-cyk">Premiers pas avec le cadriciel CYK</h2>
+
+<p>Maintenant que l’application <code class="language-plaintext highlighter-rouge">cyk-demo</code> fonctionne sur votre ordinateur, voyons comment se présente la programmation avec le cadriciel CYK en parcourant le code source et en effectuant quelques modifications.</p>
 
 <p><a name="install_code"></a></p>
 <h2 id="installer-visual-studio-code">Installer Visual Studio Code</h2>
