link to film application

--- a/compta-intro/index.html
+++ b/compta-intro/index.html
@@ -42,7 +42,13 @@
       <div class="wrapper">
         <h1 id="démo-compta">Démo Compta</h1>
 
-<p>L’application est accessible sur <a href="https://demo.cyklang.net">https://demo.cyklang.net</a></p>
+<p>L’application de démonstration Comptabilité est accessible sur :</p>
+
+<p><a href="https://demo.cyklang.net">https://demo.cyklang.net</a></p>
+
+<p>Nous mettons aussi à votre disposition une application de gestion de films et d’acteurs avec une interface plus grand public et qui sert de base au tutoriel destiné aux développeurs :</p>
+
+<p><a href="https://demo.cyklang.net/spa/#/run/film">https://demo.cyklang.net/spa/#/run/film</a></p>
 
 <h2 id="sommaire">Sommaire</h2>
 
