--- a/getting-started/index.html
+++ b/getting-started/index.html
@@ -44,13 +44,18 @@
 
 <p>Si vous voulez voir un aperçu de l’expérience utilisateur permise par le framework CYK, dirigez-vous plutôt vers l’<a href="/compta-intro/">introduction au logiciel de démonstration cyk-compta</a> qui décrit l’ergonomie de l’interface dans un contexte professionnel avec une mini application de comptabilité.</p>
 
-<p>Si vous êtes interessé par l’expérience du développeur, alors vous êtes au bon endroit. Pour nous concentrer sur la chaine de développement, nous utiliserons une application plus simple que la comptabilité mais ce ne sera pas non plus le trivial ‘Hello World’ pour que nous puissions couvrir les différents aspects d’une véritable application.
-Nous allons gérer une base de données cinématographiques contenant simplement 3 tables :</p>
+<p>Si vous êtes interessé par l’expérience du développeur, alors vous êtes au bon endroit. Pour nous concentrer sur la chaine de développement, nous utiliserons une application plus simple que la comptabilité mais ce ne sera pas non plus le trivial ‘Hello World’ pour que nous puissions couvrir les différents aspects d’une véritable application.</p>
+
+<p>Nous allons gérer une base de données cinématographiques contenant simplement 3 tables :</p>
 <ul>
   <li>la table des acteurs</li>
   <li>la table des films</li>
   <li>la table des liens entre les films et les acteurs</li>
 </ul>
+
+<p>Vous pouvez tester l’application obtenue sur <a href="https://demo.cyklang.net/spa/#/run/film">https://demo.cyklang.net/spa/#/run/film</a></p>
+
+<p>avec le login <em>compta</em> et le mot de passe <em>bilité</em></p>
 
 <h2 id="installer-lenvironnement-de-développement">Installer l’environnement de développement</h2>
 
